- Network discovery improved
- Management console:
	- "Alarm Details" view
	- "Area" option implemented on line charts
	- Multiple DCIs can be combined on one graph on "Performance" tab
	- New dashboard element: separator
	- DCIs can be created from MIB Explorer
	- Textual conventions for selected MIB object displayed in MIB explorer
	- Fixed bug with chart titles in dashboards
- Android client:
	- Select all/unselect all in alarms list
	- Multipliers for graphs and last values: binary (power of two) and decimal (power of ten)
	- Show number of pending alarms in home screen
- API for creating embedded application agents
- Fixed issues: #23, #47, #49, #131, #162, #163, #175, #177, #178, #180, #186,
                #187, #188, #189, #192, #196


*
* 1.2.4
*

- New global variable $dci in transformation scripts
- Management console:
	- Command line options for automatic connect
	- Container type objects can be expanded/collapsed by double click
	  in the object tree
	- Maps and dashboards can be opened by double click in the object tree
	- Line charts can be opened by double click on DCI in last values view
	- Implemented seed-based network maps
	- Decoration elements on network maps can be moved and resized
	- Object details view can be opened from alarm's context menu
	- Custom time intervals can be set in line chart properties
- NXSL: implemented short-circuit evaluation of logical expressions (&& and ||)
- New attribute "isLocalMgmt" in NXSL "Node" class
- New parameter Icmp.PingStdDev in PING subagent
- Cisco Catalyst 3550 supported by CATALYST driver
- Intervals of less than a minute can be defined with custom DCI schedules
- Agent parameters File.xxx (File.Size, etc) now support strftime style macros
  for current date/time (similar to file name in log parser)
- Android client:
	- Restructured settings activity
	- Alarm status icon notification configurable by settings (independent from playing the sound assigned to the category)