@@ -1,6 +1,6 @@
 /**
  * NetXMS - open source network management system
- * Copyright (C) 2003-2010 Victor Kirhenshtein
+ * Copyright (C) 2003-2013 Victor Kirhenshtein
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -32,6 +32,9 @@ import org.netxms.ui.eclipse.console.resources.StatusDisplayInfo;
  */
 public class ObjectTooltip extends Figure
 {
+	/**
+	 * @param object
+	 */
 	public ObjectTooltip(GenericObject object)
 	{
 		setBorder(new MarginBorder(3));
